--- a/settings.gradle
+++ b/settings.gradle
@@ -13,7 +13,8 @@ include 'groovy-ant',
         'groovy-templates',
         'groovy-test',
         'groovy-testng',
-        'groovy-xml'
+        'groovy-xml',
+        'groovy-spark'
         
 rootProject.children.each { prj ->
     prj.projectDir = new File("$rootDir/subprojects/$prj.name")
