groovy-spark works, groovy-spark-example works but need to be simplified

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "subprojects/groovy-spark"]
 	path = subprojects/groovy-spark
 	url = https://github.com/bunions1/groovy-spark.git
+[submodule "subprojects/groovy-spark-example"]
+	path = subprojects/groovy-spark-example
+	url = https://github.com/bunions1/groovy-spark-example.git
